--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "geolib": "^2.0.24",
-    "mysql2": "^1.6.1",
     "sequelize": "^4.22.11",
-    "sqlite3": "^3.1.13"
+    "sqlite3": "https://github.com/mapbox/node-sqlite3/tarball/master"
   }
 }
